Agentforce/force-app/main/default/objects/Activity/fields/Assigned_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Business_Unit__c</fullName>
    <formula>TEXT(Owner:User.Business_Unit__c)</formula>
    <label>Assigned Business Unit</label>
    <type>Text</type>
</CustomField>