Agentforce/force-app/main/default/objects/Activity/fields/Assigned_Corporate_Type__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Corporate_Type__c</fullName>
    <formula>TEXT(Owner:User.Corporate_Type__c)</formula>
    <label>Assigned Corporate Type</label>
    <type>Text</type>
</CustomField>