Agentforce/force-app/main/default/objects/Activity/fields/Assigned_Region__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Region__c</fullName>
    <formula>TEXT(Owner:User.Region__c)</formula>
    <label>Assigned Region</label>
    <type>Text</type>
</CustomField>