Agentforce/force-app/main/default/objects/Activity/fields/Assigned_Team__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Team__c</fullName>
    <formula>TEXT( Owner:User.Team__c )</formula>
    <label>Assigned Team</label>
    <type>Text</type>
</CustomField>