Agentforce/force-app/main/default/objects/Activity/fields/Assigned_User_Active__c.field-meta.xml
<CustomField>
    <fullName>Assigned_User_Active__c</fullName>
    <description>Displays if the Assigned to User is Active</description>
    <formula>Owner:User.IsActive</formula>
    <label>Assigned User Active</label>
    <type>Checkbox</type>
</CustomField>