Agentforce/force-app/main/default/objects/Activity/fields/Call_direction__c.field-meta.xml
<CustomField>
    <fullName>Call_direction__c</fullName>
    <label>Call Direction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>