Agentforce/force-app/main/default/objects/Activity/fields/Call_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Call_Outcome__c</fullName>
    <description>AD-58 - selectable picklist values to capture the outcome when logging a call</description>
    <label>Call Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contact made</fullName>
            </value>
            <value>
                <fullName>Voicemail</fullName>
            </value>
            <value>
                <fullName>Switchboard</fullName>
            </value>
            <value>
                <fullName>No contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>