Agentforce/force-app/main/default/objects/Activity/fields/Callback_Date__c.field-meta.xml
<CustomField>
    <fullName>Callback_Date__c</fullName>
    <label>Callback Date</label>
    <type>Date</type>
</CustomField>