Agentforce/force-app/main/default/objects/Activity/fields/Event_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Event_Attendance__c</fullName>
    <label>Event Attendance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>