Agentforce/force-app/main/default/objects/Activity/fields/Event_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Event_Attendees__c</fullName>
    <label>Event Attendees</label>
    <type>TextArea</type>
</CustomField>