Agentforce/force-app/main/default/objects/Activity/fields/Event_Host__c.field-meta.xml
<CustomField>
    <fullName>Event_Host__c</fullName>
    <label>Event Host</label>
    <length>255</length>
    <type>Text</type>
</CustomField>