Agentforce/force-app/main/default/objects/Activity/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cricket</fullName>
            </value>
            <value>
                <fullName>Dinners - Awards</fullName>
            </value>
            <value>
                <fullName>Dinners - Other</fullName>
            </value>
            <value>
                <fullName>Football</fullName>
            </value>
            <value>
                <fullName>Golf</fullName>
            </value>
            <value>
                <fullName>Horse Racing</fullName>
            </value>
            <value>
                <fullName>Industry Seminar</fullName>
            </value>
            <value>
                <fullName>Motor Racing</fullName>
            </value>
            <value>
                <fullName>Music Concert</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Rugby League</fullName>
            </value>
            <value>
                <fullName>Rugby Union</fullName>
            </value>
            <value>
                <fullName>Sports Other</fullName>
            </value>
            <value>
                <fullName>Tennis</fullName>
            </value>
            <value>
                <fullName>Theatre</fullName>
            </value>
            <value>
                <fullName>YSP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>