Agentforce/force-app/main/default/objects/Activity/fields/Hospitality_Name__c.field-meta.xml
<CustomField>
    <fullName>Hospitality_Name__c</fullName>
    <label>Hospitality Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>