Agentforce/force-app/main/default/objects/Activity/fields/Hospitality_Type__c.field-meta.xml
<CustomField>
    <fullName>Hospitality_Type__c</fullName>
    <label>Hospitality Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cricket</fullName>
            </value>
            <value>
                <fullName>Awards Dinner</fullName>
            </value>
            <value>
                <fullName>Formal Dinner</fullName>
            </value>
            <value>
                <fullName>Football</fullName>
            </value>
            <value>
                <fullName>Golf</fullName>
            </value>
            <value>
                <fullName>Horse Racing</fullName>
            </value>
            <value>
                <fullName>Industry Seminar</fullName>
            </value>
            <value>
                <fullName>Motor Racing</fullName>
            </value>
            <value>
                <fullName>Concerts</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Rugby</fullName>
            </value>
            <value>
                <fullName>Other Sports</fullName>
            </value>
            <value>
                <fullName>Tennis</fullName>
            </value>
            <value>
                <fullName>Theatre &amp; Arts</fullName>
            </value>
            <value>
                <fullName>Internal Event</fullName>
            </value>
            <value>
                <fullName>Cycling</fullName>
            </value>
            <value>
                <fullName>Fishing</fullName>
            </value>
            <value>
                <fullName>Charity Event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>