Agentforce/force-app/main/default/objects/Activity/fields/HR_Case_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>HR_Case_Manager_Email__c</fullName>
    <description>Hidden field to be populated by Flow from the Case Manager lookup on a Case where the &apos;Case Manager&apos; value is selected in the HR Notification field.</description>
    <label>HR Case Manager Email</label>
    <type>Email</type>
</CustomField>