Agentforce/force-app/main/default/objects/Activity/fields/HR_Notifications__c.field-meta.xml
<CustomField>
    <fullName>HR_Notifications__c</fullName>
    <label>HR Notifications</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assignee</fullName>
            </value>
            <value>
                <fullName>Case Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>