Agentforce/force-app/main/default/objects/Activity/fields/Lead_CompanyName__c.field-meta.xml
<CustomField>
    <fullName>Lead_CompanyName__c</fullName>
    <label>Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>