Agentforce/force-app/main/default/objects/Activity/fields/Lead_Phone__c.field-meta.xml
<CustomField>
    <fullName>Lead_Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>