Agentforce/force-app/main/default/objects/Activity/fields/Linked_To__c.field-meta.xml
<CustomField>
    <fullName>Linked_To__c</fullName>
    <formula>Case(LEFT(WhoId , 3),&apos;00Q&apos;,&apos;Lead&apos;,&apos;003&apos;,&apos;Contact&apos;,&apos;Other&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Linked To</label>
    <type>Text</type>
</CustomField>