Agentforce/force-app/main/default/objects/Activity/fields/Meeting_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Outcome__c</fullName>
    <label>Meeting Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Follow Up Required</fullName>
            </value>
            <value>
                <fullName>New Call</fullName>
            </value>
            <value>
                <fullName>No Opportunity</fullName>
            </value>
            <value>
                <fullName>Opportunity Identified</fullName>
            </value>
            <value>
                <fullName>Recall/Reminder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>