Agentforce/force-app/main/default/objects/Activity/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AMER</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>APAC &amp; ME</fullName>
            </value>
            <value>
                <fullName>UK &amp; IRE</fullName>
            </value>
            <value>
                <fullName>GROUP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>