Agentforce/force-app/main/default/objects/Activity/fields/Site_visit__c.field-meta.xml
<CustomField>
    <fullName>Site_visit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Site visit</label>
    <type>Checkbox</type>
</CustomField>