Agentforce/force-app/main/default/objects/Activity/fields/Site_visit_date__c.field-meta.xml
<CustomField>
    <fullName>Site_visit_date__c</fullName>
    <label>Site visit date</label>
    <type>Date</type>
</CustomField>