Agentforce/force-app/main/default/objects/Activity/fields/Status_Flag__c.field-meta.xml
<CustomField>
    <fullName>Status_Flag__c</fullName>
    <description>AD-55 - flag to indicate if the task is open, not started, completed or overdue</description>
    <formula>CASE(
Status,
&apos;Completed&apos;, IMAGE(&apos;/resource/RAGFlagGreen&apos;, &apos; &apos;),
IF(
ActivityDate &lt; TODAY(),
IMAGE(&apos;/resource/RAGFlagGIF&apos;, &apos; &apos;),
IF(
ActivityDate = TODAY(),
IMAGE(&apos;/resource/RAGFlagRed&apos;, &apos; &apos;),
IF(
AND(ActivityDate &gt; TODAY(), (ActivityDate - TODAY()) &lt;= 2),
IMAGE(&apos;/resource/RAGFlagAmber&apos;, &apos; &apos;),
IMAGE(&apos;/resource/RAGFlagAmber&apos;, &apos; &apos;)
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Flag</label>
    <type>Text</type>
</CustomField>