Agentforce/force-app/main/default/objects/Activity/fields/Telemarketing_Result__c.field-meta.xml
<CustomField>
    <fullName>Telemarketing_Result__c</fullName>
    <label>Telemarketing Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Existing Customer</fullName>
            </value>
            <value>
                <fullName>Appointment</fullName>
            </value>
            <value>
                <fullName>Inaccurate Data</fullName>
            </value>
            <value>
                <fullName>Detractor</fullName>
            </value>
            <value>
                <fullName>Contacted</fullName>
            </value>
            <value>
                <fullName>Self Delivered</fullName>
            </value>
            <value>
                <fullName>Discovery Meeting</fullName>
            </value>
            <value>
                <fullName>Discovery Follow Up Meeting</fullName>
            </value>
            <value>
                <fullName>Unable to Contact</fullName>
            </value>
            <value>
                <fullName>Incorrect Decision Maker</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Deferred</fullName>
            </value>
            <value>
                <fullName>Not in Scope</fullName>
            </value>
            <value>
                <fullName>Planned Follow Up</fullName>
            </value>
            <value>
                <fullName>Discovery</fullName>
            </value>
            <value>
                <fullName>No Reason for Change</fullName>
            </value>
            <value>
                <fullName>Site Survey</fullName>
            </value>
            <value>
                <fullName>Site Visit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>